# wald

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Containerfile.build  Makefile  README.md  build-all.sh  build-container.sh  build-linux.sh  build.rs  bump-version.sh  clean.sh  release.sh
src/: id.rs  lib.rs  main.rs  naming.rs  output.rs
src/commands/: branch.rs  clone.rs  doctor.rs  init.rs  mod.rs  move_cmd.rs  plant.rs  prune.rs  repo.rs  status.rs  sync.rs  uproot.rs  worktrees.rs
src/git/: bare.rs  history.rs  mod.rs  shell.rs  worktree.rs
src/types/: config.rs  manifest.rs  mod.rs  repo_id.rs  state.rs
src/workspace/: baum.rs  discovery.rs  gitignore.rs  mod.rs  path_safety.rs
test/: PATTERNS.md  README.md  run_tests.sh
test/cases/: test_branch.sh  test_doctor.sh  test_init.sh  test_move.sh  test_plant.sh  test_prune.sh  test_repo_add.sh  test_repo_fetch.sh  test_repo_gc.sh  test_repo_list.sh  test_repo_remove.sh  test_status.sh  test_sync_basic.sh  test_sync_moves.sh  test_uproot.sh  test_worktrees.sh
test/fixtures/: manifest-empty.yaml  manifest-invalid.yaml  manifest-missing-repos.yaml  manifest-valid.yaml
test/fixtures/sample-repos/: create.sh
test/integration/: test_multi_machine.sh
test/lib/: assertions.sh  helpers.sh  setup.sh
