[package]
name = "wald"
version = "0.1.0"
edition = "2021"
description = "Git workspace manager: bare repos, worktrees, and cross-machine sync"
authors = ["Christoph Spiegel"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
anyhow = "1"
thiserror = "2"
dirs = "6"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
