[package]
name = "wald"
version = "0.0.0"  # Actual version from git describe via build.rs
edition = "2024"
description = "Git workspace manager: bare repos, worktrees, and cross-machine sync"
license = "GPL-3.0-or-later"
repository = "https://git.zib.de/tools/wald"
authors = ["Christoph Spiegel"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
git2 = "0.19"
getrandom = "0.2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
anyhow = "1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[package.metadata]
tools-release = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
